2001-03-07  Darin Adler  <darin@eazel.com>

	* gnome-vfs.spec.in: Remove file-types-capplet too.

2001-03-07  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>
	             Gene Z. Ragan  <gzr@eazel.com>

	Part of the fix for bugzilla.eazel.com bug 588 (Remove old "MIME
	types" capplet from control center)

	* Makefile.am: Remove mime-type-capplet subdir.

	* configure.in: Don't create mime-type-capplet Makefiles or check
	for control-center.

	* gnome-vfs.spec.in: remove control-center dependency.

	* mime-type-capplet/*: removed.

	* po/POTFILES.in: Remove mime-type-capplet files

2001-03-07  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com> (reluctantly)

	Fixed 7495 (Need to test condition after pthread_cond_wait)
	
	* libgnomevfs-pthread/gnome-vfs-thread-pool.c:
	(gnome_vfs_thread_pool_wait_for_work), (thread_entry):
	Work around what is described as a spurious wakeup of
	condition variables in the Pthread standard.
	Added a while loop around pthread_cond_wait checking if
	an entry_point is lined up.

2001-03-06  Darin Adler  <darin@eazel.com>

	* configure.in: Updated version number to 1.1.

2001-03-06  Darin Adler  <darin@eazel.com>

	Created the gnome-vfs-1-0 branch, for 1.0 development.
	HEAD is now for post-1.0.

2001-03-06  Darin Adler  <darin@eazel.com>

	Merged all changes back here from the gnome-vfs-1 branch.

=== start of changes from gnome-vfs-1 branch ===

2001-03-04  Dan Winship  <danw@ximian.com>

	reviewed by: Maciej Stachowiak <mjs@eazel.com>
	
	* mime-type-capplet/libuuid/Makefile.am (NULL): Remove "SUBDIRS="
	line, which causes automake (1.4 at least) to generate a Makefile
	containing invalid sh script that bash (2.03.0(1) at least) won't
	parse.

2001-03-04  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* data/mime/gnome-vfs-mime-magic:
	Make Postscript Fonts magic work for all fonts versioned 1.x, not
	just 1.0.
	